Bug 1817521: Make WebTransportError match the spec r=saschanaz

Issues were that the streamErrorCode wasn't nullable, and it wasn't WrapObjecting

Differential Revision: https://phabricator.services.mozilla.com/D170257